[project]
name = "fieldday"
version = "0.1.0"
description = "SVG diagram generator for C struct memory layouts — fields, padding, bitfields, themeable output"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pycparser>=2.21",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
fieldday = "fieldday.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
